@@ -14,6 +14,7 @@ import com.system_gestion_soutenance.api.coordinator.project.dto.ProjectResponse
 import com.system_gestion_soutenance.api.coordinator.project.dto.ProjectStatusUpdateRequest;
 import com.system_gestion_soutenance.api.coordinator.project.dto.UpdateProjectRequest;
 import com.system_gestion_soutenance.api.coordinator.project.entity.Project;
+import com.system_gestion_soutenance.api.coordinator.group.repository.GroupRepository;
 import com.system_gestion_soutenance.api.coordinator.project.entity.ProjectStatus;
 import com.system_gestion_soutenance.api.coordinator.project.service.ProjectService;
 import com.system_gestion_soutenance.api.user.repository.UserRepository;
@@ -54,6 +55,9 @@ class ProjectControllerTest {
 	@MockitoBean
 	private UserRepository userRepository;
 
+	@MockitoBean
+	private GroupRepository groupRepository;
+
 	@BeforeEach
 	void setUp() {
 		SecurityContextHolder.getContext().setAuthentication(new UsernamePasswordAuthenticationToken(
@@ -72,12 +76,12 @@ class ProjectControllerTest {
 		when(project.getId()).thenReturn(1L);
 		when(project.getTitle()).thenReturn("Projet Test");
 
-		ProjectResponse dto = new ProjectResponse(1L, "Projet Test", "Desc", "PFE", "PENDING", 1L, "Supervisor",
-				List.of());
+		ProjectResponse dto = new ProjectResponse(1L, "Projet Test", "Desc", "PFE", null, "PENDING", 1L, "Supervisor",
+				List.of(), List.of());
 
 		when(projectService.findAll(0, 10)).thenReturn(new PaginatedResponse<>(List.of(project), 1, 1, 0, 10));
 		when(projectService.buildProjectGroupIdMap(anyList())).thenReturn(Map.of(1L, 1L));
-		when(projectMapper.toDto(project, Map.of(1L, 1L))).thenReturn(dto);
+		when(projectMapper.toDto(project, Map.of(1L, 1L), Collections.emptyMap())).thenReturn(dto);
 
 		mockMvc.perform(get("/api/coordinator/projects")).andExpect(status().isOk())
 				.andExpect(jsonPath("$.data.items").isArray())
@@ -86,13 +90,14 @@ class ProjectControllerTest {
 
 	@Test
 	void create_returnsCreated() throws Exception {
-		CreateProjectRequest request = new CreateProjectRequest("New Project", "Description", 1L, "PFE", List.of(1L));
+		CreateProjectRequest request = new CreateProjectRequest("New Project", "Description", 1L, "PFE", List.of(1L),
+				null);
 		Project project = mock(Project.class);
-		ProjectResponse dto = new ProjectResponse(1L, "New Project", "Desc", "PFE", "PENDING", 1L, "Supervisor",
-				List.of());
+		ProjectResponse dto = new ProjectResponse(1L, "New Project", "Desc", "PFE", null, "PENDING", 1L, "Supervisor",
+				List.of(), List.of());
 
 		when(projectService.create(any())).thenReturn(project);
-		when(projectMapper.toDto(project, Collections.emptyMap())).thenReturn(dto);
+		when(projectMapper.toDto(project, Collections.emptyMap(), Collections.emptyMap())).thenReturn(dto);
 
 		mockMvc.perform(post("/api/coordinator/projects").contentType(MediaType.APPLICATION_JSON)
 				.content(objectMapper.writeValueAsString(request))).andExpect(status().isCreated())
@@ -101,13 +106,13 @@ class ProjectControllerTest {
 
 	@Test
 	void update_returnsProject() throws Exception {
-		UpdateProjectRequest updates = new UpdateProjectRequest("Updated Project", "Desc", "PFE");
+		UpdateProjectRequest updates = new UpdateProjectRequest("Updated Project", "Desc", "PFE", null);
 		Project project = mock(Project.class);
-		ProjectResponse dto = new ProjectResponse(1L, "Updated Project", "Desc", "PFE", "PENDING", 1L, "Supervisor",
-				List.of());
+		ProjectResponse dto = new ProjectResponse(1L, "Updated Project", "Desc", "PFE", null, "PENDING", 1L,
+				"Supervisor", List.of(), List.of());
 
 		when(projectService.update(eq(1L), any())).thenReturn(project);
-		when(projectMapper.toDto(project, Collections.emptyMap())).thenReturn(dto);
+		when(projectMapper.toDto(project, Collections.emptyMap(), Collections.emptyMap())).thenReturn(dto);
 
 		mockMvc.perform(put("/api/coordinator/projects/1").contentType(MediaType.APPLICATION_JSON)
 				.content(objectMapper.writeValueAsString(updates))).andExpect(status().isOk())
@@ -125,11 +130,11 @@ class ProjectControllerTest {
 	@Test
 	void updateStatus_approve_returns200() throws Exception {
 		Project project = mock(Project.class);
-		ProjectResponse dto = new ProjectResponse(1L, "Projet Test", "Desc", "PFE", "APPROVED", 1L, "Supervisor",
-				List.of());
+		ProjectResponse dto = new ProjectResponse(1L, "Projet Test", "Desc", "PFE", null, "APPROVED", 1L, "Supervisor",
+				List.of(), List.of());
 
 		when(projectService.updateStatus(eq(1L), eq(ProjectStatus.APPROVED))).thenReturn(project);
-		when(projectMapper.toDto(project, Collections.emptyMap())).thenReturn(dto);
+		when(projectMapper.toDto(project, Collections.emptyMap(), Collections.emptyMap())).thenReturn(dto);
 
 		ProjectStatusUpdateRequest request = new ProjectStatusUpdateRequest(ProjectStatus.APPROVED);
 
@@ -141,11 +146,11 @@ class ProjectControllerTest {
 	@Test
 	void updateStatus_reject_returns200() throws Exception {
 		Project project = mock(Project.class);
-		ProjectResponse dto = new ProjectResponse(1L, "Projet Test", "Desc", "PFE", "REJECTED", 1L, "Supervisor",
-				List.of());
+		ProjectResponse dto = new ProjectResponse(1L, "Projet Test", "Desc", "PFE", null, "REJECTED", 1L, "Supervisor",
+				List.of(), List.of());
 
 		when(projectService.updateStatus(eq(1L), eq(ProjectStatus.REJECTED))).thenReturn(project);
-		when(projectMapper.toDto(project, Collections.emptyMap())).thenReturn(dto);
+		when(projectMapper.toDto(project, Collections.emptyMap(), Collections.emptyMap())).thenReturn(dto);
 
 		ProjectStatusUpdateRequest request = new ProjectStatusUpdateRequest(ProjectStatus.REJECTED);
 
